人性化改动

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
         </div>
         
         <div class="tower-selection">
-            <div class="tower-option" data-tower="archer" data-cost="50">
+            <div class="tower-option" data-tower="archer">
                 <div class="tower-icon">🏹</div>
-                <div class="tower-cost">50💰</div>
+                <div class="tower-cost"></div>
             </div>
-            <div class="tower-option" data-tower="magic" data-cost="100">
+            <div class="tower-option" data-tower="magic">
                 <div class="tower-icon">🧙</div>
-                <div class="tower-cost">100💰</div>
+                <div class="tower-cost"></div>
             </div>
-            <div class="tower-option" data-tower="cannon" data-cost="150">
+            <div class="tower-option" data-tower="cannon">
                 <div class="tower-icon">💣</div>
-                <div class="tower-cost">150💰</div>
+                <div class="tower-cost"></div>
             </div>
         </div>
         
