--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <script src="js/entities/projectiles/IceProjectile.js"></script>
     <script src="js/entities/projectiles/PoisonProjectile.js"></script>
     <script src="js/entities/BulletSlot.js"></script>
+    <script src="js/entities/reloadIndicator.js"></script>
     <script src="js/entities/tower.js"></script>
     
     <!-- 效果系统 -->
